--- a/plugin.ini
+++ b/plugin.ini
@@ -1,11 +1,11 @@
 [info]
-name="Item Relations"
-author="Roy Rosenzweig Center for History and New Media"
-description="Allows administrators to define relations between items."
-link="https://omeka.org/codex/Plugins/ItemRelations_2.0"
-support_link="https://omeka.org/forums/forum/plugins"
+name="Item Relations Plus"
+author="Roy Rosenzweig Center for History and New Media, improved by GerZah and Daniel Berthereau"
+description="Allows administrators to define relations between items via an interactive UI."
+link="https://github.com/GerZah/plugin-ItemRelations"
+support_link="https://github.com/GerZah/plugin-ItemRelations/issues"
 license="GPLv3"
 omeka_minimum_version="2.0"
-omeka_target_version="2.4"
-version="2.0.2.2"
+omeka_target_version="2.5"
+version="2.0.3"
 tags="item,relation,rdf"
